test/must_fail/parallel_ammeter_to_battery.ref
warn: Device ammeter A2 is parallel to device battery U1 (anode 1, cathode 0), this may cause problems!
error: Transient analysis timestep too small
hint: stderr doAnalyses: TRAN:  Timestep too small; initial timepoint: cause unrecorded.
error: Unhandled error in the output of ngspice: stderr Warning: singular matrix:  check node v_u1#branch
error: Unhandled error in the output of ngspice: stderr Warning: singular matrix:  check node v_u1#branch
error: Unhandled error in the output of ngspice: stderr Warning: singular matrix:  check node v_u1#branch
error: Unhandled error in the output of ngspice: stderr Warning: singular matrix:  check node v_u1#branch
error: Unhandled error in the output of ngspice: stderr Warning: singular matrix:  check node v_u1#branch
error: Unhandled error in the output of ngspice: stderr Warning: singular matrix:  check node v_u1#branch
error: Unhandled error in the output of ngspice: stderr Warning: source stepping failed
error: Unhandled error in the output of ngspice: stderr Error: Transient op failed, timestep too small
error: Unhandled error in the output of ngspice: stderr Error: The operating point could not be simulated successfully.
error: Unhandled error in the output of ngspice: stderr Any of the following steps may fail.!
error: Unhandled error in the output of ngspice: stdout Transient solution failed -
netlist : string[113] = ** netlist_render BEGIN
* battery U1
V_U1 1 0 DC 9
* ammeter A2
V_AMMETER__A2 1 0 DC 0
** netlist_render END
.end
log
  [0]: stdout Doing analysis at TEMP = 27.000000 and TNOM = 27.000000
  [1]: stderr Using SPARSE 1.3 as Direct Linear Solver
  [2]: stderr Warning: singular matrix:  check node v_u1#branch
  [3]: stderr Note: Starting dynamic gmin stepping
  [4]: stderr Warning: singular matrix:  check node v_u1#branch
  [9]: stderr Warning: Dynamic gmin stepping failed
  [10]: stderr Note: Starting true gmin stepping
  [11]: stderr Warning: True gmin stepping failed
  [12]: stderr Note: Starting source stepping
  [13]: stderr Warning: source stepping failed
  [14]: stderr Note: Transient op started
  [15]: stderr Error: Transient op failed, timestep too small
  [16]: stderr Error: The operating point could not be simulated successfully.
  [17]: stderr Any of the following steps may fail.!
  [18]: stdout Transient solution failed -
  [19]: stdout Last Node Voltages
  [20]: stdout ------------------
  [21]: stdout Node                                   Last Voltage        Previous Iter
  [22]: stdout ----                                   ------------        -------------
  [23]: stdout 1                                                 0                    0
  [24]: stdout v_ammeter__a2#branch                              0                    0
  [25]: stdout v_u1#branch                                       0                    9 *
  [26]: stdout No. of Data Rows : 0
  [27]: stderr doAnalyses: TRAN:  Timestep too small; initial timepoint: cause unrecorded.
  [28]: stderr tran simulation(s) aborted
error: ngspice_process_log() found 12 errors
  [parallel_ammeter_to_battery.ngjs:0:0] in <anonymous>()
    tran().run().chart('I(A1)');
           ^

Stack trace (4 frames):
  [Exception.js:0:0, core.js:0:0] in Exception()
    Internal.buffered_stack_trace(aMessage || "Error");
             ^
  [ngspice_process_log.js:0:0, core.js:0:0] in ngspice_process_log()
    throw new Exception('ngspice_process_log() found ' + errors.length + ' errors');
          ^
  [analysis/tran.js:0:0, core.js:0:0] in Tran.run()
    var err = ngspice_process_log(ngspice_log(), this.ret.netlist);
              ^
  [parallel_ammeter_to_battery.ngjs:0:0] in <anonymous>()
    tran().run().chart('I(A1)');
           ^

exit(12)
